# autobattler

./: .gitignore  CMakeLists.txt
include/ab/: campaign.hpp  character.hpp  classes.hpp  combat.hpp  factory.hpp  level.hpp  loot.hpp  monster.hpp  rng.hpp  stats.hpp  types.hpp  ui.hpp  weapon.hpp
src/app/: campaign.cpp  character.cpp  combat.cpp  factory.cpp  level.cpp  loot.cpp  monster.cpp  rng_mersenne.cpp  ui.cpp
src/ui/cli/: main.cpp
